@@ -1,5 +1,6 @@
 === ongoing (0.1.X - to be released as 0.2) ===
 
+- Added migration to move currency data
 - Added django-currency-history to auto-track rates
 - Removed currency and currency rate model
 - Better rendering of description and invoice PDF, considering children
